--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Create.cshtml
@@ -24,7 +24,7 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Responsável Técnico <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" name="NomUsuario" class="form-control" placeholder="eg.: Nome do responsável técnico " required maxlength="60" />
+                            <input type="text" name="NomResponsavelTecnico" class="form-control" placeholder="eg.: Nome do responsável técnico " required maxlength="60" />
                         </div>
                     </div>
                     <div class="form-group row">
