--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
@@ -23,7 +23,7 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Responsável Técnico <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" disabled="disabled" name="ResponsavelTecnico" class="form-control" placeholder="eg.: Nome do responsável técnico " required maxlength="60" value="@Model.ResponsavelTecnico.NomResponsavelTecnico" />
+                            <input type="text" disabled="disabled" name="NomResponsavelTecnico" class="form-control" placeholder="eg.: Nome do responsável técnico " required maxlength="60" value="@Model.ResponsavelTecnico.NomResponsavelTecnico" />
                         </div>
                     </div>
                     <div class="form-group row">
