--- a/Infraero.Relprev.WebUi/Views/Shared/_Layout.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Shared/_Layout.cshtml
@@ -163,6 +163,11 @@
                                             </a>
                                         </li>
                                         <li>
+                                            <a class="nav-link" href="@Url.Action("Index", "Perfil")">
+                                                Perfil
+                                            </a>
+                                        </li>
+                                        <li>
                                             <a class="nav-link" href="@Url.Action("CreatePerfil", "Usuario")">
                                                 Perfil Usuário
                                             </a>
