--- a/Infraero.Relprev.WebUi/Views/Perfil/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Perfil/Create.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -7,7 +6,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "Perfil", FormMethod.Post))
+        @using (@Html.BeginForm("Create", "Perfil", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -23,14 +22,14 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Nome do Perfil </label>
                         <div class="col-lg-9">
-                            <input type="text" name="NomPerfil" class="form-control" placeholder="eg.: Nome do Perfil" />
+                            <input type="text" name="NomPerfil" class="form-control" placeholder="eg.: Nome do Perfil" title="Por favor informe Nome do Perfil" required />
 
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Descrição do Perfil <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" name="DscPerfil" class="form-control" placeholder="eg.: Descrição do Perfil" />
+                            <input type="text" name="DscPerfil" class="form-control" placeholder="eg.: Descrição do Perfil" title="Por favor informe Descrição do Perfil" required />
 
                         </div>
                     </div>
@@ -50,34 +49,34 @@
     </div>
 </div>
 @section CssSpecificVendor {
-    <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />
-    <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
-    <script src="~/vendor/select2/js/select2.js"></script>
 
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script>
-        // Select2
-        (function($) {
+        (function () {
 
             'use strict';
 
-            if ( $.isFunction($.fn[ 'select2' ]) ) {
-
-                $(function() {
-                    $('[data-plugin-selectTwo]').each(function() {
-                        var $this = $( this ),
-                            opts = {};
-
-                        var pluginOptions = $this.data('plugin-options');
-                        if (pluginOptions)
-                            opts = pluginOptions;
-
-                        $this.themePluginSelect2(opts);
-                    });
-                });
-
-            }
+            // basic
+            $("#form").validate({
+                highlight: function (label) {
+                    $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
+                },
+                success: function (label) {
+                    $(label).closest('.form-group').removeClass('has-error');
+                    label.remove();
+                },
+                errorPlacement: function (error, element) {
+                    var placement = element.closest('.input-group');
+                    if (!placement.get(0)) {
+                        placement = element;
+                    }
+                    if (error.text() !== '') {
+                        placement.after(error);
+                    }
+                }
+            });
 
         }).apply(this, [jQuery]);
 
