--- a/Infraero.Relprev.WebUi/Views/Shared/_Layout.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Shared/_Layout.cshtml
@@ -66,11 +66,7 @@
                         <div class="profile-info" data-lock-name="John Doe" data-lock-email="johndoe@okler.com">
                             <h2 class="name">@User.Identity.Name</h2>
                             
-                            @{
-                                var result =((ClaimsIdentity)User.Identity).FindAll(ClaimTypes.Role).OrderBy(o=>o.Value).FirstOrDefault().Value;
-                            }
-
-                        <span class="role">@result</span>
+                            <span class="role">@(((ClaimsIdentity)User.Identity).FindFirst(ClaimTypes.Role).Value)</span>
                         </div>
 
                         <i class="fa custom-caret"></i>
