--- a/Infraero.Relprev.WebUi/Views/Perfil/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Perfil/Create.cshtml
@@ -26,13 +26,13 @@
 
                         </div>
                     </div>
-                    <div class="form-group row">
+                    @*<div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Descrição do Perfil <span class="required">*</span></label>
                         <div class="col-sm-9">
                             <input type="text" name="DscPerfil" class="form-control" placeholder="eg.: Descrição do Perfil" title="Por favor informe Descrição do Perfil" required />
 
                         </div>
-                    </div>
+                    </div>*@
                 </div>
                 <footer class="card-footer">
                     <div class="row justify-content-end">
@@ -50,38 +50,38 @@
 </div>
 @section CssSpecificVendor {
 }
-@section Scripts {
+    @section Scripts {
 
-    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
-    <script>
-        (function () {
+        <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
+        <script>
+            (function () {
 
-            'use strict';
+                'use strict';
 
-            // basic
-            $("#form").validate({
-                highlight: function (label) {
-                    $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
-                },
-                success: function (label) {
-                    $(label).closest('.form-group').removeClass('has-error');
-                    label.remove();
-                },
-                errorPlacement: function (error, element) {
-                    var placement = element.closest('.input-group');
-                    if (!placement.get(0)) {
-                        placement = element;
+                // basic
+                $("#form").validate({
+                    highlight: function (label) {
+                        $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
+                    },
+                    success: function (label) {
+                        $(label).closest('.form-group').removeClass('has-error');
+                        label.remove();
+                    },
+                    errorPlacement: function (error, element) {
+                        var placement = element.closest('.input-group');
+                        if (!placement.get(0)) {
+                            placement = element;
+                        }
+                        if (error.text() !== '') {
+                            placement.after(error);
+                        }
                     }
-                    if (error.text() !== '') {
-                        placement.after(error);
-                    }
-                }
-            });
+                });
 
-        }).apply(this, [jQuery]);
+            }).apply(this, [jQuery]);
 
-    </script>
-}
+        </script>
+    }
 
 
 
