--- a/Infraero.Relprev.WebUi/Views/Perfil/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Perfil/Index.cshtml
@@ -28,8 +28,7 @@
                     <table class="table table-bordered table-striped mb-0" id="datatable-default">
                         <thead>
                             <tr>
-                                <th class="text-center">Unidade de atendimento</th>
-                                <th class="text-center">Perfil de ocorrência</th>
+                                <th class="text-center">Nome Perfil</th>
                                 <th class="text-center">Ações</th>
                             </tr>
                         </thead>
@@ -39,7 +38,6 @@
                             {
                                 <tr>
                                     <td>@Html.DisplayFor(modelItem => item.NomPerfil)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.DscPerfil)</td>
                                     <td class="actions">
                                         <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="Perfil" asp-route-id="@item.CodPerfil" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
                                         <a data-toggle="tooltip" data-placement="top" title="Excluir"asp-action="Delete" asp-controller="Perfil" asp-route-id="@item.CodPerfil"  class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
