--- a/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Infraero.Relprev.CrossCutting.Models.RelatoModel
+@inject Microsoft.Extensions.Configuration.IConfiguration configuration
 @{
     ViewData["Title"] = "Cadastrar";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -8,19 +9,20 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "Relato", FormMethod.Post, new { id = "form" }))
-        {
-            <section class="card">
-                <header class="card-header">
-                    <div class="card-actions">
-                        <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
-                        <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
-                    </div>
 
-                    <h2 class="card-title">Cadastrar Relato de Prevenção</h2>
+        <section class="card">
+            <header class="card-header">
+                <div class="card-actions">
+                    <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
+                    <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
+                </div>
 
-                </header>
-                <div class="card-body">
+                <h2 class="card-title">Cadastrar Relato de Prevenção</h2>
+
+            </header>
+            <div class="card-body">
+                @using (@Html.BeginForm("Create", "Relato", FormMethod.Post, new { id = "form" }))
+                {
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Unidade de infraestrutura (Infrastructure unit) <span class="required">*</span></label>
                         <div class="col-lg-9">
@@ -41,7 +43,11 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </span>
-                                <input id="DatOcorrencia" name="DatOcorrencia" placeholder="Data da ocorrência do relato" class="form-control">
+                                <input id="DtOcorrencia" name="DtOcorrencia"
+                                       required
+                                       style="z-index: auto;"
+                                       data-plugin-datepicker data-date-format="dd/mm/yyyy" data-plugin-options='{"language": "pt-BR"}'
+                                       placeholder="__/__/____" class="form-control startdate">
                             </div>
                         </div>
 
@@ -53,7 +59,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-clock-o"></i>
                                 </span>
-                                <input type="text" id="HorOcorrencia" name="HorOcorrencia" data-plugin-timepicker class="form-control" data-plugin-options='{ "showMeridian": false }' placeholder="eg.: Horário da ocorrência do relato">
+                                <input type="text" data-plugin-timepicker class="form-control" data-plugin-options='{ "showMeridian": false }'>
                             </div>
                         </div>
                     </div>
@@ -113,12 +119,14 @@
                             <input type="text" name="NomEmpresaRelator" class="form-control" placeholder="eg.: Nome da empresa do relator" maxlength="100" />
                         </div>
                     </div>
-                    <div class="form-group row">
-                        <label class="col-lg-3 control-label text-lg-right pt-2">
-                            Nome do arquivo (File name)
-                        </label>
-                        <div class="col-lg-6">
-                            <div class="fileupload fileupload-new" data-provides="fileupload">
+                }
+
+                <div class="form-group row">
+                    <label class="col-lg-3 control-label text-lg-right pt-2">
+                        Nome do arquivo (File name)
+                    </label>
+                    <div class="col-lg-6">
+                        @*<div class="fileupload fileupload-new" data-provides="fileupload">
                                 <div class="input-append">
                                     <div class="uneditable-input">
                                         <i class="fa fa-file fileupload-exists"></i>
@@ -130,89 +138,89 @@
                                         <input type="file" />
                                     </span>
                                     <a href="#" class="btn btn-default fileupload-exists" data-dismiss="fileupload">Remover</a>
-                                    <a href="#" class="btn btn-default fileupload-exists" data-dismiss="fileupload">Anexar</a>
+                                    <button class="btn btn-default fileupload-exists" type="button">Upload File</button>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-sm-2 control-label text-sm-right pt-2"></label>
-                        <div class="col-sm-9">
-                            <table class="table table-responsive-md table-striped mb-0">
-                                <thead>
-                                    <tr>
-                                        <th>Arquivo</th>
-                                        <th>Ação</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>atendimento.png</td>
-                                        <td>
-                                            <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color:#d43f3a'><i class="fa fa-trash-o"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>relato.png</td>
-                                        <td>
-                                            <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color:#d43f3a'><i class="fa fa-trash-o"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>atendimento.png</td>
-                                        <td>
-                                            <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color:#d43f3a'><i class="fa fa-trash-o"></i></a>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            </div>*@
+                        <form asp-controller="Relato" asp-action="UploadFile" method="post"
+                              enctype="multipart/form-data">
 
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-lg-3 control-label text-sm-right pt-2">Código (Captcha)</label>
-                        <div class="col-lg-4">
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="fa fa-tag"></i>
-                                </span>
-                                <input type="email" name="email" class="form-control" placeholder="eg.: Código de captcha gerado" maxlength="100" />
-                            </div>
-                        </div>
-
-                        <button type="reset" class="btn btn-warning pull-left mr-2">Atualizar &nbsp;&nbsp;<i class="fa fa-refresh"></i></button>
+                            <input type="file" name="file" />
+                            <button type="submit">Anexar Arquivo</button>
+                        </form>
                     </div>
                 </div>
-                <footer class="card-footer">
-                    <div class="row justify-content-end">
-                        <div class="col-sm-9">
-                            <button class="btn  btn-success pull-left mr-2">Salvar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
-                            <button type="reset" class="btn btn-danger pull-left mr-2">Cancelar &nbsp;&nbsp;<i class="fa fa-remove"></i></button>
-                            <a href="@Url.Action("Index", "SubLocal")" class="btn btn-dark pull-left">Voltar &nbsp;&nbsp;<i class="fa fa-reply"></i></a>
+                <div class="form-group row">
+                    <label class="col-sm-2 control-label text-sm-right pt-2"></label>
+                    <div class="col-sm-9">
+                        <table class="table table-responsive-md table-striped mb-0">
+                            <thead>
+                                <tr>
+                                    <th>Arquivo</th>
+                                    <th>Ação</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>atendimento.png</td>
+                                    <td>
+                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>relato.png</td>
+                                    <td>
+                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>atendimento.png</td>
+                                    <td>
+                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" href="#modalIcon" class="modal-basic on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
 
-                        </div>
                     </div>
-                </footer>
-            </section>
-        }
+                </div>
+
+
+                <div class="form-group row">
+                    <label class="col-lg-3 control-label text-sm-right pt-2">Código (Captcha)</label>
+                    <div class="g-recaptcha" data-sitekey="@(configuration["ReCaptcha:SiteKey"])"></div>
+                </div>
+            </div>
+            <footer class="card-footer">
+                <div class="row justify-content-end">
+                    <div class="col-sm-9">
+                        <button class="btn  btn-success pull-left mr-2" form="form" type="submit">Salvar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
+                        <button type="reset" class="btn btn-danger pull-left mr-2">Cancelar &nbsp;&nbsp;<i class="fa fa-remove"></i></button>
+                        <a href="@Url.Action("Index", "SubLocal")" class="btn btn-dark pull-left">Voltar &nbsp;&nbsp;<i class="fa fa-reply"></i></a>
+
+                    </div>
+                </div>
+            </footer>
+        </section>
     </div>
 </div>
 @section CssSpecificVendor {
+    <link href="~/vendor/bootstrap-datepicker/css/bootstrap-datepicker3.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
-    <link rel="stylesheet" href="vendor/bootstrap-timepicker/css/bootstrap-timepicker.css" />
+    <link rel="stylesheet" href="~/vendor/bootstrap-timepicker/css/bootstrap-timepicker.css" />
     <link rel="stylesheet" href="~/vendor/bootstrap-fileupload/bootstrap-fileupload.min.css" />
 
 }
 @section Scripts {
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
+    <script src="~/vendor/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+    <script src="~/vendor/bootstrap-datepicker/locales/bootstrap-datepicker.pt-BR.min.js"></script>
+    <script src="~/vendor/jquery-mask/jquery.mask.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
-    <script src="vendor/bootstrap-timepicker/bootstrap-timepicker.js"></script>
+    <script src="~/vendor/bootstrap-timepicker/bootstrap-timepicker.js"></script>
     <script src="~/vendor/bootstrap-fileupload/bootstrap-fileupload.min.js"></script>
     <script src="~/js/relato.js"></script>
-    <script>
-        
-
-    </script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 }
 
 
