--- a/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
@@ -184,8 +184,7 @@
                             </select>
                         </div>
                         <div class="col-sm-2">
-                            @*<button class="btn  btn-primary pull-left mr-2" v-on:click="GetListRelato()">Pesquisar &nbsp;&nbsp;<i class="fa fa-search"></i></button>*@
-                            <a href="#" class="btn  btn-primary pull-left mr-2" id="adicionar" v-on:click="Adicionar">Adicionar &nbsp;&nbsp;<i class="fa fa-plus"></i></a>
+                            <button class="btn  btn-primary pull-left mr-2" form="form" type="submit" id="adicionar" v-on:click="Adicionar">Adicionar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
                         </div>
                         <input type="hidden" id="ListCodResponsavel" name="ListCodResponsavel">
                     </div>
@@ -196,14 +195,21 @@
                             <table id="datatable-default" name="datatable-default" class="table table-responsive-md table-striped mb-0">
                                 <thead>
                                     <tr>
-                                        <th>Cod Empresa de atendimento</th>
                                         <th>Empresa de atendimento</th>
-                                        <th>Cod Responsável técnico</th>
                                         <th>Responsável técnico</th>
                                         <th>Ações</th>
                                     </tr>
                                 </thead>
-
+                                @foreach (var item in Model.ListResponsavelTecnico)
+                                {
+                                    <tr>
+                                        <td>@Html.DisplayFor(modelItem => item.NomeEmpresa)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.NomeResponsavel)</td>
+                                        <td class="actions">
+                                            <a data-toggle="tooltip" data-placement="top" title="Remover" asp-action="Delete" asp-controller="AtribuirRespRelato" asp-route-idRelato="@Model.Relato.CodRelato" asp-route-idEmpresa ="@item.CodEmpresa" asp-route-idResponsavel = "@item.CodResponsavel" class="on-default remove-row" style='color: #191C21'><i class="fa fa-trash"></i></a>
+                                        </td>
+                                    </tr>
+                                }
                             </table>
 
                         </div>
@@ -251,6 +257,71 @@
         }).apply(this, [jQuery]);
 
 
+
+    </script>
+    <script>
+        /*
+Name: 			UI Elements / Modals - Examples
+Written by: 	Okler Themes - (http://www.okler.net)
+Theme Version: 	2.0.0
+*/
+
+        (function ($) {
+
+            'use strict';
+
+            var crud = @ViewBag.CrudMessage;
+
+            if (crud===1) {
+                new PNotify({
+                    title: 'Atribuição',
+                    text: 'Responsável atribuído com sucesso!',
+                    type: 'success'
+                });
+            }else if (crud === 2) {
+                new PNotify({
+                    title: 'Atribuição',
+                    text: 'Responsável atribuído com sucesso.',
+                    type: 'warning'
+                });
+            }else if (crud === 3) {
+                new PNotify({
+                    title: 'Atribuição',
+                    text: 'Responsável excluído com sucesso.',
+                    type: 'error'
+                });
+            }
+
+            var notify = @ViewBag.NotifyMessage;
+            var messagem = '@ViewBag.Notify';
+
+            if (notify===0) {
+                new PNotify({
+                    title: 'Atribuição',
+                    text: messagem,
+                    type: 'success'
+                });
+            }else if (notify === 1) {
+                new PNotify({
+                    title: 'Atribuição',
+                    text: messagem,
+                    type: 'warning'
+                });
+            }else if (notify === 2) {
+                new PNotify({
+                    title: 'Atribuição',
+                    text: messagem,
+                    type: 'error'
+                });
+            }
+
+            //Tooltip
+            if ($.isFunction($.fn['tooltip'])) {
+                $('[data-toggle=tooltip],[rel=tooltip]').tooltip({ container: 'body' });
+            }
+
+
+        }).apply(this, [jQuery]);
 
     </script>
 }
